src/objects/Quiz__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exam</label>
        <referenceTo>Exam__c</referenceTo>
        <relationshipLabel>Quiz</relationshipLabel>
        <relationshipName>Quiz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quiz</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>quiz-{00000}</displayFormat>
        <label>Quiz No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>